--- a/index.html
+++ b/index.html
@@ -19,19 +19,6 @@
 </head>
 
 <body>
-<nav class="navbar navbar-transparent navbar-fixed-top" role="navigation">  
-  <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-  </div><!-- /.container -->
-</nav>
 <div class="main" style="background-image: url('images/image.jpeg')">
 
 <!--    Change the image source '/images/default.jpg' with your favourite image.     -->
@@ -44,6 +31,9 @@
         <h1 class="logo">
             AISYWLC 2022
         </h1>
+        <h3 class="logo">
+          Coming Soon
+      </h3>
 <!--  H1 can have 2 designs: "logo" and "logo cursive"           -->
         
         <div class="content">
